--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
         </dependency>
 
 
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.3</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
 
