--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>lectur6</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
+
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -30,16 +33,22 @@
             <version>11.0.12</version>
         </dependency>
 
-
-
+        <dependency>
+            <groupId>com.att.nsa</groupId>
+            <artifactId>nsaServerLibrary</artifactId>
+            <version>1.0.10</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.3</version>
         </dependency>
-
-
-
+        <dependency>
+            <groupId>org.logevents</groupId>
+            <artifactId>logevents</artifactId>
+            <version>0.3.3</version>
+        </dependency>
 
     </dependencies>
 
