--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
             <version>2.0.3</version>
         </dependency>
         <dependency>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.logevents</groupId>
             <artifactId>logevents</artifactId>
             <version>0.3.3</version>
